Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
     kubernetes.io/ingress.allow-http: "false"
     networking.gke.io/managed-certificates: cert-biblio
spec:
  rules:
    - host: biblio-project.ncharfi.com
    - http:
        paths:
        - path: /*
          backend:
            serviceName: web
            servicePort: 8080
